using mockito in TestRewardsService() + adapting userGetRewards()